err/samport.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SamPort-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/samport'...
Compiling './lib/python3.5/site-packages/samport/pvcom.py'...
***   File "./lib/python3.5/site-packages/samport/pvcom.py", line 200
    print 'ac_monthly [' , i, '](kWh) = ' , ac_monthly[i]
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samport/pvres.py'...
***   File "./lib/python3.5/site-packages/samport/pvres.py", line 200
    print 'ac_monthly [' , i, '](kWh) = ' , ac_monthly[i]
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samport/sam_solar_time_ppa.py'...
***   File "./lib/python3.5/site-packages/samport/sam_solar_time_ppa.py", line 247
    print num_parallel
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/samport/ssc.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (ssc.py, line 260)
Compiling './lib/python3.5/site-packages/samport/sscapi.py'...
***   File "./lib/python3.5/site-packages/samport/sscapi.py", line 210
    print 'data set:'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/samport/testssc.py'...
***   File "./lib/python3.5/site-packages/samport/testssc.py", line 8
    print 'ssc version = ' , ssc_api.version()
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
